# discord-mpv-rpc

./: .gitignore  Cargo.toml  README.md  discord-rpc.lua  install_linux.sh  install_mac.sh  install_windows.ps1
src/: anilist.rs  anime.rs  main.rs  sources.rs
