[package]
name = "discord_mpv_rpc"
version = "0.0.1"
edition = "2021"
description = "Discord Rich Presence for MPV"
authors = ["Mon Aie <mon_aie@live.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "time", "net", "io-util", "io-std", "fs"] }
anyhow = "1.0"
discord-rpc-client = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.8"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
dirs = "5.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
fuzzy-matcher = "0.3"
once_cell = "1.19"
shellexpand = "3.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
